Improving the design of the 'all certificates' tab

--- a/src/css/output.css
+++ b/src/css/output.css
@@ -884,6 +884,9 @@
   .-mx-\[10rem\] {
     margin-inline: calc(10rem * -1);
   }
+  .mx-4 {
+    margin-inline: calc(var(--spacing) * 4);
+  }
   .mx-10 {
     margin-inline: calc(var(--spacing) * 10);
   }
@@ -3144,6 +3147,16 @@
       }
     }
   }
+  .hover\:scale-110 {
+    &:hover {
+      @media (hover: hover) {
+        --tw-scale-x: 110%;
+        --tw-scale-y: 110%;
+        --tw-scale-z: 110%;
+        scale: var(--tw-scale-x) var(--tw-scale-y);
+      }
+    }
+  }
   .hover\:scale-\[101\%\] {
     &:hover {
       @media (hover: hover) {
@@ -3176,6 +3189,13 @@
     &:hover {
       @media (hover: hover) {
         text-decoration-line: underline;
+      }
+    }
+  }
+  .hover\:opacity-30 {
+    &:hover {
+      @media (hover: hover) {
+        opacity: 30%;
       }
     }
   }
