Improving the 'skills' grid

--- a/src/css/input.css
+++ b/src/css/input.css
@@ -88,7 +88,7 @@
   --animate-keys-loading: keys-loading 1s ease-in-out infinite;
   --animate-fade-in-x: fade-in-x 800ms ease-in-out;
   --animate-fade-in-x-i: fade-in-x-i 800ms ease-in-out;
-  --animate-fade-in-scale: fade-in-scale 600ms ease-in-out;
+  --animate-fade-in-scale: fade-in-scale 1s ease-in-out;
   --animate-fade-in-y: fade-in-y 600ms ease-in-out;
   --animate-fade-fall: fade-fall 1s ease-out;
   --animate-card-skill-out: card-skill-out 510ms ease-out;
@@ -214,7 +214,7 @@
     @keyframes fade-in-scale {
       0% {
         opacity: 0;
-        transform: scale(0.8);
+        transform: scale(0.9);
       }
       100% {
         opacity: 1;
@@ -296,7 +296,7 @@
 }
 
 .skill_grid{
-  @apply h-full w-full flex items-center place-content-center hover:scale-[102%] shadow-black/30 shadow-md transition delay-75;
+  @apply h-full w-full flex items-center place-content-center hover:scale-[102%] shadow-black/30 shadow-md transition delay-100;
 }
 
 .box_code{
