--- a/src/css/output.css
+++ b/src/css/output.css
@@ -1040,14 +1040,14 @@
   .h-64 {
     height: calc(var(--spacing) * 64);
   }
-  .h-\[29rem\] {
-    height: 29rem;
+  .h-\[20rem\] {
+    height: 20rem;
   }
-  .h-\[34rem\] {
-    height: 34rem;
+  .h-\[28rem\] {
+    height: 28rem;
   }
-  .h-\[40rem\] {
-    height: 40rem;
+  .h-\[50rem\] {
+    height: 50rem;
   }
   .h-\[103vh\] {
     height: 103vh;
@@ -1058,20 +1058,20 @@
   .h-\[15rem\] {
     height: 15rem;
   }
-  .h-\[20rem\] {
-    height: 20rem;
-  }
-  .h-\[28rem\] {
-    height: 28rem;
+  .h-\[29rem\] {
+    height: 29rem;
   }
   .h-\[30rem\] {
     height: 30rem;
   }
+  .h-\[34rem\] {
+    height: 34rem;
+  }
   .h-\[35rem\] {
     height: 35rem;
   }
-  .h-\[50rem\] {
-    height: 50rem;
+  .h-\[40rem\] {
+    height: 40rem;
   }
   .h-\[140vh\] {
     height: 140vh;
@@ -1622,9 +1622,6 @@
   }
   .gap-5 {
     gap: calc(var(--spacing) * 5);
-  }
-  .gap-7 {
-    gap: calc(var(--spacing) * 7);
   }
   .gap-8 {
     gap: calc(var(--spacing) * 8);
@@ -2672,9 +2669,6 @@
   .opacity-20 {
     opacity: 20%;
   }
-  .opacity-30 {
-    opacity: 30%;
-  }
   .opacity-100 {
     opacity: 100%;
   }
@@ -3381,20 +3375,33 @@
   }
 }
 .header_text {
+  border-radius: var(--radius-lg);
+  padding-inline: calc(var(--spacing) * 3);
+  padding-block: calc(var(--spacing) * 1);
   font-family: var(--font-nexa);
+  font-size: var(--text-lg);
+  line-height: var(--tw-leading, var(--text-lg--line-height));
   color: var(--color-slate-100);
   &:hover {
     @media (hover: hover) {
-      --tw-scale-x: 105%;
-      --tw-scale-y: 105%;
-      --tw-scale-z: 105%;
-      scale: var(--tw-scale-x) var(--tw-scale-y);
+      --tw-translate-y: calc(var(--spacing) * -1);
+      translate: var(--tw-translate-x) var(--tw-translate-y);
     }
   }
   &:hover {
     @media (hover: hover) {
-      --tw-shadow: 0 25px 50px -12px var(--tw-shadow-color, rgb(0 0 0 / 0.25));
+      background-color: var(--color-indigo-700);
+    }
+  }
+  &:hover {
+    @media (hover: hover) {
+      --tw-shadow: 0 10px 15px -3px var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 4px 6px -4px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
       box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
+    }
+  }
+  &:hover {
+    @media (hover: hover) {
+      --tw-shadow-color: color-mix(in oklab, var(--color-black) 10%, transparent);
     }
   }
 }
@@ -3588,10 +3595,10 @@
   color: var(--color-blue-600);
 }
 .textShadow {
-  text-shadow: 0 1px 2px rgba(28, 28, 28);
+  text-shadow: 0 2px 5px rgba(52, 52, 52);
 }
 .textShadow2 {
-  text-shadow: 0 1px 2px rgba(46, 46, 46);
+  text-shadow: 0 1px 1px rgba(50, 50, 46);
 }
 @keyframes spin {
   to {
