--- a/src/css/output.css
+++ b/src/css/output.css
@@ -3174,7 +3174,7 @@
   font-family: Cherolina;
   font-style: normal;
   font-weight: 400;
-  src: url(./fonts/Cherolina.ttf) format('truetype');
+  src: url(/src/fonts/Cherolina.ttf) format('truetype');
 }
 @font-face {
   font-family: Coolvetica;
@@ -3198,7 +3198,7 @@
   font-family: Nexa;
   font-style: normal;
   font-weight: 400;
-  src: url(./fonts/Nexa.ttf) format('truetype');
+  src: url(/src/fonts/Nexa.ttf) format('truetype');
 }
 @font-face {
   font-family: Mogilite;
