Fixing bug in display (Responsive Design - 'about')

--- a/src/css/input.css
+++ b/src/css/input.css
@@ -283,13 +283,17 @@
     border-right-color: transparent;
   }}
 
-.write {
-  position: relative;
-  overflow: hidden;
-  white-space: nowrap;
-  width: 612px;
-  animation: typewriter 2.1s steps(48) alternate , blink 0.5s steps(48);
-}
+
+  @utility write {
+    position: relative;
+    overflow: hidden;
+    white-space: nowrap;
+    width: 612px;
+    animation: typewriter 2.1s steps(48) alternate , blink 0.5s steps(48);
+  }
+
+
+
 
 .parallax {
   transform: translateY(0);
